fix: arrow hover fix on iOS devices

--- a/themes/superAwesome/sass/_layout.scss
+++ b/themes/superAwesome/sass/_layout.scss
@@ -632,6 +632,8 @@ footer {
     .slick-next {
         top:100% !important;
         right: 15%;
+        width: 50px;
+        height: 50px;
         @include desktop {
             right:25%;
         }
@@ -647,7 +649,8 @@ footer {
     .slick-prev {
         left: 10%;
         top:100% !important;
-
+        width: 50px;
+        height: 50px;
         z-index: 1;
         @include desktop {
             left:25%;
